--- a/_posts/2013-11-22-closure.md
+++ b/_posts/2013-11-22-closure.md
@@ -29,13 +29,35 @@ console.log(a);     // => ReferenceError: a is not defined
 
 In JavaScript, it's god damn easy to pollute the _global environment_.
 To prevent this, it's a common pattern to wrap the your code in an
-immediately-invoked function. It can also be used to achieve information
-hiding (more on this later) and avoid _variable hoisting_ from within blocks.
+immediately-invoked function, aka IIFE, pronounced "iffy".  It can
+also be used to achieve information hiding (more on this later) and
+avoid _variable hoisting_ from within blocks.
 
 ```js
 (function() {
     // code goes here...
 }());
+```
+
+## Emulate block scope
+We can also use IFFE to emulate block scope.
+
+```js
+for (var i = 1; i <= 3; i++) {
+  (function(i){
+    $element.click(function() { alert(i); });
+  })(i);
+}
+```
+
+Normally, the variables is not scoped within the `foo` loop, when the
+element gets clicked, it will always the final value of `i`, 3. Wrap
+it in an IFFE solved this perfectly. Nice shortcut with CoffeeScript:
+
+```coffee
+for i in [1..3]
+  do (i) ->
+    $element.click -> alert(i)
 ```
 
 
@@ -107,10 +129,10 @@ for(var i = 0; i < 10; i++) {
 }
 ```
 
-You would expect this will print numbers `0` to `9`, but it will simply
+You would expect this will print numbers 0 to 9, but it will simply
 print `10` ten times. Because JavaScript does not have block scope, the
 `i` inside `for` will always refer to the same `i`, at the time `console.log`
-gets called, the value of `i` has been set to `10`.
+gets called, the value of `i` has been set to 10.
 
 The solution: create a closure that close over `i`, wrap the `setTimeout`
 with an immediately-invoked function and pass in the value of `i` at that time.
